force-app/main/default/objects/fboost__B_Metric__c/fboost__B_Metric__c.object-meta.xml
<CustomObject>
    <description>Stores platform related metrics</description>
    <label>Boost Metric</label>
    <nameField>
        <displayFormat>Metric-{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Metric Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Boost Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>