force-app/main/default/objects/fboost__B_Metric__c/fields/fboost__CreationTimeHour__c.field-meta.xml
<CustomField>
    <fullName>fboost__CreationTimeHour__c</fullName>
    <description>The Hour of creation time</description>
    <formula>VALUE(MID (TEXT (fboost__CreationTime__c), 12, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Hour of creation time</inlineHelpText>
    <label>Creation Time [Hour]</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>