force-app/main/default/objects/fboost__B_Metric__c/fields/fboost__Error__c.field-meta.xml
<CustomField>
    <fullName>fboost__Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Limit passes Error threshold</description>
    <inlineHelpText>Determines if Limit passes Error threshold</inlineHelpText>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>