force-app/main/default/objects/fboost__B_Metric__c/fields/fboost__IsActual__c.field-meta.xml
<CustomField>
    <fullName>fboost__IsActual__c</fullName>
    <formula>(ISNULL(fboost__NextLog__c) || ISBLANK(fboost__NextLog__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Actual</label>
    <type>Checkbox</type>
</CustomField>