force-app/main/default/objects/fboost__B_Metric__c/fields/fboost__IsAsyncRelated__c.field-meta.xml
<CustomField>
    <fullName>fboost__IsAsyncRelated__c</fullName>
    <description>Determines if metric is related with Async Execution</description>
    <formula>CONTAINS(fboost__MetricName__c, &apos;Async&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines if metric is related with Async Execution</inlineHelpText>
    <label>Is Async Related</label>
    <type>Checkbox</type>
</CustomField>