force-app/main/default/objects/fboost__B_Metric__c/fields/fboost__IsOrgLimit__c.field-meta.xml
<CustomField>
    <fullName>fboost__IsOrgLimit__c</fullName>
    <description>Determines Platform Limit metrics</description>
    <formula>CONTAINS(fboost__MetricName__c, &apos;OrgLimit&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines Platform Limit metrics</inlineHelpText>
    <label>Is Org Limit</label>
    <type>Checkbox</type>
</CustomField>