force-app/main/default/objects/fboost__B_Metric__c/fields/fboost__LimitValue__c.field-meta.xml
<CustomField>
    <fullName>fboost__LimitValue__c</fullName>
    <description>Determines Limit value</description>
    <inlineHelpText>Determines Limit value</inlineHelpText>
    <label>Limit Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>