force-app/main/default/objects/fboost__B_Metric__c/fields/fboost__MetricConfigApiName__c.field-meta.xml
<CustomField>
    <fullName>fboost__MetricConfigApiName__c</fullName>
    <description>Metrics Config Api Name</description>
    <externalId>true</externalId>
    <label>Metrics Config Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>