force-app/main/default/objects/fboost__B_Metric__c/fields/fboost__MetricName__c.field-meta.xml
<CustomField>
    <fullName>fboost__MetricName__c</fullName>
    <description>Metric Name</description>
    <externalId>true</externalId>
    <label>Metric Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>