force-app/main/default/objects/fboost__B_Metric__c/fields/fboost__NextLog__c.field-meta.xml
<CustomField>
    <fullName>fboost__NextLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Next Limit Log</description>
    <label>Next Log</label>
    <referenceTo>fboost__B_Metric__c</referenceTo>
    <relationshipLabel>Previous Metrics</relationshipLabel>
    <relationshipName>PreviousMetrics</relationshipName>
    <type>Lookup</type>
</CustomField>