force-app/main/default/objects/fboost__B_Metric__c/fields/fboost__Type__c.field-meta.xml
<CustomField>
    <fullName>fboost__Type__c</fullName>
    <description>Event type</description>
    <externalId>true</externalId>
    <label>Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>