force-app/main/default/objects/fboost__B_Metric__c/fields/fboost__UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>fboost__UniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>