force-app/main/default/objects/fboost__B_Metric__c/fields/fboost__Usage__c.field-meta.xml
<CustomField>
    <fullName>fboost__Usage__c</fullName>
    <formula>fboost__Value__c / fboost__LimitValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>