force-app/main/default/objects/fboost__B_Metric__c/fields/fboost__Warning__c.field-meta.xml
<CustomField>
    <fullName>fboost__Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Limit passes Warning threshold</description>
    <inlineHelpText>Determines if Limit passes Warning threshold</inlineHelpText>
    <label>Warning</label>
    <type>Checkbox</type>
</CustomField>