force-app/main/default/objects/fboost__B_Metric__c/listViews/fboost__ActualMetrics.listView-meta.xml
<ListView>
    <fullName>fboost__ActualMetrics</fullName>
    <columns>NAME</columns>
    <columns>fboost__MetricName__c</columns>
    <columns>fboost__Value__c</columns>
    <columns>fboost__LimitValue__c</columns>
    <columns>fboost__Type__c</columns>
    <columns>fboost__NextLog__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>fboost__NextLog__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>fboost__Value__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Actual Metrics</label>
</ListView>