force-app/main/default/objects/fboost__B_Metric__c/listViews/fboost__All.listView-meta.xml
<ListView>
    <fullName>fboost__All</fullName>
    <columns>NAME</columns>
    <columns>fboost__MetricConfigApiName__c</columns>
    <columns>fboost__Value__c</columns>
    <columns>fboost__Type__c</columns>
    <columns>fboost__NextLog__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>